Правки перед допуском

--- a/source/form.html
+++ b/source/form.html
@@ -44,7 +44,7 @@
                   </a>
                 </li>
                 <li class="site-list__item">
-                  <a href="#" class="site-list__link">
+                  <a href="https://htmlacademy.ru/intensive/adaptive" class="site-list__link">
                     HTML Academy
                   </a>
               </ul>
