--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
                   </a>
                 </li>
                 <li class="site-list__item">
-                  <a href="#" class="site-list__link">
+                  <a href="https://htmlacademy.ru/intensive/adaptive" class="site-list__link">
                     HTML Academy
                   </a>
               </ul>
@@ -69,20 +69,20 @@
           </div>
           <section class="download">
             <div class="download__wrapper">
-              <a href="#" class="download__button">Скачать&nbsp;приложение</a>
+              <a href="https://www.apple.com/ru/ios/app-store/" class="download__button">Скачать&nbsp;приложение</a>
               <ul class="download__list">
                 <li class="download__platform">
-                  <a class="download__platform download__platform--apple" href="#" aria-label="Скачать в App Store">
+                  <a class="download__platform download__platform--apple" href="https://www.apple.com/ru/ios/app-store/" aria-label="Скачать в App Store">
                     <img src="img/logo-apple.svg" alt="Логотип Apple">
                   </a>
                 </li>
                 <li class="download__platform">
-                  <a class="download__platform download__platform--android" href="#" aria-label="Скачать в Play Market">
+                  <a class="download__platform download__platform--android" href="https://play.google.com/store/apps" aria-label="Скачать в Play Market">
                     <img src="img/logo-android.svg" alt="Логотип Android">
                   </a>
                 </li>
                 <li class="download__platform">
-                <a class="download__platform download__platform--windows" href="#" aria-label="Скачать в Microsoft Store">
+                <a class="download__platform download__platform--windows" href="https://www.microsoft.com/ru-ru/store/apps/windows-phone" aria-label="Скачать в Microsoft Store">
                     <img src="img/logo-microsoft.svg" alt="Логотип Microsoft">
                   </a>
                 </li>
