Правки перед допуском 2

--- a/source/form.html
+++ b/source/form.html
@@ -7,8 +7,7 @@
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page__body">
-    <div class="page__body-wrapper">
-      <header class="page-header">
+    <header class="page-header">
         <div class="page-header__wrapper">
           <div class="page-header__logo-wrapper">
             <a class="page-header__logo" href="index.html">
@@ -51,15 +50,16 @@
             </div>
           </nav>
         </div>
-      </header>
+    </header>
 
-      <main class="page-main">
+    <main class="page-main">
         <section class="intro intro--small">
           <h1 class="intro__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
         </section>
         <section class="form">
+          <h2 class="visually-hidden">Форма для заполнения</h2>
           <p class="form__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
-          <span class="form__title--appeal">Пожалуйста, заполните форму ниже:</span></p>
+          <span class="form__title-appeal">Пожалуйста, заполните форму ниже:</span></p>
           <form action="https://echo.htmlacademy.ru" class="form__field"  method="post">
             <div class="form__block form__block--data">
               <div class="form__input-block">
@@ -166,9 +166,9 @@
             </div>
           </div>
         </section>
-      </main>
+    </main>
 
-      <footer class="page-footer">
+    <footer class="page-footer">
         <div class="page-footer__wrapper">
           <a class="page-footer__link" href="index.html">
             <svg class="logo-pink-blue" width="146.3px" height="40.375px">
@@ -179,6 +179,7 @@
             </svg>
           </a>
           <section class="page-footer__social">
+            <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="social-list">
               <li class="social-list__item">
                 <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter">
@@ -203,7 +204,7 @@
               </li>
             </ul>
           </section>
-          <section class="page-footer__credits">
+          <section class="page-footer__credits">            <h2 class="visually-hidden">Разработано</h2>
             <span>Разработано</span>
             <a href="https://htmlacademy.ru/intensive/adaptive" class="page-footer__credits-logo">
               <svg width="40" height="40">
@@ -212,7 +213,6 @@
             </a>
           </section>
         </div>
-      </footer>
-    </div>
+    </footer>
   </body>
 </html>
