--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,7 @@
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page__body">
-    <div class="page__body-wrapper">
-      <header class="page-header">
+    <header class="page-header">
         <div class="page-header__wrapper">
           <div class="page-header__logo-wrapper">
             <a class="page-header__logo" href="index.html">
@@ -51,9 +50,9 @@
             </div>
           </nav>
         </div>
-      </header>
+    </header>
 
-      <main class="page-main">
+    <main class="page-main">
         <section class="intro">
           <div class="intro__wrapper">
             <h1 class="intro__title">Взгляните на&nbsp;жизнь иначе!</h1>
@@ -68,6 +67,7 @@
             </div>
           </div>
           <section class="download">
+            <h2 class="visually-hidden">Скачать</h2>
             <div class="download__wrapper">
               <a href="https://www.apple.com/ru/ios/app-store/" class="download__button">Скачать&nbsp;приложение</a>
               <ul class="download__list">
@@ -92,13 +92,14 @@
           </section>
         </section>
         <section class="features">
-            <div class="features__title-block">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <div class="features__title-block">
               <div class="features__title-wrapper">
                 <p class="features__title">Устали от серости мегаполиса?</p>
                 <p class="features__title">Нам есть, что вам предложить!</p>
               </div>
-            </div>
-            <div class="features__list-block">
+          </div>
+          <div class="features__list-block">
               <div class="features__list-wrapper">
                 <ul class="features__list">
                   <li class="features__item">
@@ -130,9 +131,10 @@
                   </picture>
               </div>
               </div>
-            </div>
+          </div>
         </section>
         <section class="effect">
+          <h2 class="visually-hidden">Эффект</h2>
           <div class="effect__wrapper">
             <div class="effect__image">
               <p>24</p>
@@ -145,6 +147,7 @@
           </div>
         </section>
         <section class="reviews">
+          <h2 class="visually-hidden">Отзывы</h2>
           <div class="reviews__wrapper slider">
             <svg class="icon-review-arrow-left" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
               <path d="M2.045,20.859L21.458,1.446c0.331-0.331,0.331-0.867,0-1.198c-0.33-0.331-0.867-0.331-1.197,0L0.248,20.261 c-0.331,0.33-0.331,0.867,0,1.197l20.013,20.013c0.164,0.165,0.382,0.248,0.599,0.248s0.434-0.083,0.599-0.248 c0.331-0.331,0.331-0.867,0-1.198L2.045,20.859z"/>
@@ -160,13 +163,14 @@
               <path d="M19.661,20.859L0.248,1.446c-0.331-0.331-0.331-0.867,0-1.198c0.33-0.331,0.867-0.331,1.197,0l20.013,20.012 c0.33,0.33,0.33,0.867,0,1.197L1.445,41.471c-0.164,0.165-0.382,0.248-0.599,0.248s-0.434-0.083-0.599-0.248 c-0.331-0.331-0.331-0.867,0-1.198L19.661,20.859z"/>
             </svg>
             <div class="reviews__toggles slider__toggles">
-              <button class="slider__toggle slider__toggle--current" type="button"></button>
-              <button class="slider__toggle" type="button"></button>
-              <button class="slider__toggle" type="button"></button>
+              <button class="slider-toggle slider-toggle--current" type="button"></button>
+              <button class="slider-toggle" type="button"></button>
+              <button class="slider-toggle" type="button"></button>
             </div>
           </div>
         </section>
         <section class="prices">
+          <h2 class="visually-hidden">Тарифы</h2>
           <div class="prices__wrapper prices-slider">
             <div class="prices__list">
               <div class="prices__item">
@@ -261,9 +265,9 @@
               </div>
             </div>
             <div class="prices__toggles prices-slider__toggles">
-              <button class="slider__toggle" type="button"></button>
-              <button class="slider__toggle slider__toggle--current" type="button"></button>
-              <button class="slider__toggle" type="button"></button>
+              <button class="slider-toggle" type="button"></button>
+              <button class="slider-toggle slider-toggle--current" type="button"></button>
+              <button class="slider-toggle" type="button"></button>
             </div>
           </div>
         </section>
@@ -287,11 +291,12 @@
           </div>
         </section>
         <section class="map">
+          <h2 class="visually-hidden">Карта</h2>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003151!2d30.32085871621117!3d59.9387191690541!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1598719570231!5m2!1sru!2sru" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </section>
-      </main>
+    </main>
 
-      <footer class="page-footer">
+    <footer class="page-footer">
         <div class="page-footer__wrapper">
           <a class="page-footer__link" href="index.html">
             <svg class="logo-pink-blue" width="146.3px" height="40.375px">
@@ -302,6 +307,7 @@
             </svg>
           </a>
           <section class="page-footer__social">
+            <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="social-list">
               <li class="social-list__item">
                 <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter">
@@ -327,6 +333,7 @@
             </ul>
           </section>
           <section class="page-footer__credits">
+            <h2 class="visually-hidden">Разработано</h2>
             <span>Разработано</span>
             <a href="https://htmlacademy.ru/intensive/adaptive" class="page-footer__credits-logo">
               <svg width="40" height="40">
@@ -335,7 +342,6 @@
             </a>
           </section>
         </div>
-      </footer>
-    </div>
+    </footer>
   </body>
 </html>
