--- a/source/photo.html
+++ b/source/photo.html
@@ -7,8 +7,7 @@
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page__body">
-    <div class="page__body-wrapper">
-      <header class="page-header">
+    <header class="page-header">
         <div class="page-header__wrapper">
           <div class="page-header__logo-wrapper">
             <a class="page-header__logo" href="index.html">
@@ -51,13 +50,14 @@
             </div>
           </nav>
         </div>
-      </header>
+    </header>
 
-      <main class="page-main">
+    <main class="page-main">
         <section class="intro intro--small">
           <h1 class="intro__title">Фотографии<br>пользователей</h1>
         </section>
         <section class="photos">
+          <h2 class="visually-hidden">Фотографии</h2>
           <div class="photos__intro-block">
             <div class="photos__intro-block-wrapper">
               <p class="photos__intro">Взгляните на фотографии, которые выкладывают пользователи! Видите,&nbsp;как&nbsp;не хватает ваших?</p>
@@ -168,6 +168,7 @@
           </div>
         </section>
         <section class="editor">
+          <h2 class="visually-hidden">Редактор фото</h2>
           <div class="editor__wrapper">
             <div class="editor__image">
               <a href="#">
@@ -180,18 +181,14 @@
             </div>
             <form action="https://echo.htmlacademy.ru" method="post" class="editor__block">
                 <div class="editor__options">
-                  <svg class="editor__options-icon editor__options-icon--active icon-editor-crop" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
-                    <path fill="none" d="M0,0h48v48H0V0z"/>
-                    <path d="M34,30h4V14c0-2.21-1.79-4-4-4H18v4h16V30z M14,34V2h-4v8H2v4h8v20c0,2.21,1.79,4,4,4h20v8h4v-8h8v-4H14z"/>
+                  <svg class="editor__options-icon editor__options-icon--active icon-editor-crop" width="48px" height="48px">
+                    <use xlink:href="./img/sprite/sprite.svg#icon-editor-crop"></use>
                   </svg>
-                  <svg class="editor__options-icon icon-editor-fill" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
-                    <path fill="none" d="M0,0h48v48H0V0z"/>
-                    <path d="M33.12,17.88L15.24,0l-2.83,2.83l4.76,4.76L6.88,17.88c-1.17,1.17-1.17,3.07,0,4.24l11,11C18.46,33.71,19.23,34,20,34 s1.54-0.29,2.12-0.88l11-11C34.29,20.95,34.29,19.05,33.12,17.88z M10.41,20L20,10.42L29.59,20H10.41z M38,23c0,0-4,4.33-4,7 c0,2.21,1.79,4,4,4s4-1.79,4-4C42,27.33,38,23,38,23z"/>
-                    <rect y="40" width="48" height="3"/>
+                  <svg class="editor__options-icon icon-editor-fill" width="48px" height="48px">
+                    <use xlink:href="./img/sprite/sprite.svg#icon-editor-fill"></use>
                   </svg>
-                  <svg class="editor__options-icon icon-editor-contrast" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="31.92px" height="31.92px" viewBox="-35.422 -7.96 31.92 31.92" enable-background="new -35.422 -7.96 31.92 31.92" xml:space="preserve">
-                    <path d="M-19.462-3.96c6.595,0,11.96,5.365,11.96,11.96s-5.365,11.96-11.96,11.96S-31.422,14.595-31.422,8 S-26.057-3.96-19.462-3.96 M-19.462-7.96c-8.814,0-15.96,7.145-15.96,15.96c0,8.813,7.146,15.96,15.96,15.96S-3.502,16.813-3.502,8 C-3.502-0.815-10.648-7.96-19.462-7.96L-19.462-7.96z"/>
-                    <path d="M-19.462,16.331c4.706,0,8.52-3.813,8.52-8.52c0-4.705-3.813-8.519-8.52-8.519"/>
+                  <svg class="editor__options-icon icon-editor-contrast" width="31.92px" height="31.92px">
+                    <use xlink:href="./img/sprite/sprite.svg#icon-editor-contrast"></use>
                   </svg>
                 </div>
                 <div class="editor__range">
@@ -215,9 +212,9 @@
               </form>
           </div>
         </section>
-      </main>
+    </main>
 
-      <footer class="page-footer">
+    <footer class="page-footer">
         <div class="page-footer__wrapper">
           <a class="page-footer__link" href="index.html">
             <svg class="logo-pink-blue" width="146.3px" height="40.375px">
@@ -228,6 +225,7 @@
             </svg>
           </a>
           <section class="page-footer__social">
+            <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="social-list">
               <li class="social-list__item">
                 <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter">
@@ -253,6 +251,7 @@
             </ul>
           </section>
           <section class="page-footer__credits">
+            <h2 class="visually-hidden">Разработано</h2>
             <span>Разработано</span>
             <a href="https://htmlacademy.ru/intensive/adaptive" class="page-footer__credits-logo">
               <svg width="40" height="40">
@@ -261,7 +260,6 @@
             </a>
           </section>
         </div>
-      </footer>
-    </div>
+    </footer>
   </body>
 </html>
