добавил tabindex, поправил по трэвису

--- a/source/form.html
+++ b/source/form.html
@@ -86,27 +86,27 @@
               <ul class="form__achievements-list">
                 <li class="form__achievements-item">
                   <input class="form__achievements-input" type="checkbox" id="selfie" name="selfie" checked>
-                  <label class="form__achievements-label" for="selfie">Сделал селфи с акулой</label>
+                  <label class="form__achievements-label" for="selfie" tabindex="0">Сделал селфи с акулой</label>
                 </li>
                 <li class="form__achievements-item">
                   <input class="form__achievements-input" type="checkbox" id="sunburn" name="sunburn" checked>
-                  <label class="form__achievements-label" for="sunburn">Обгорел на пляже</label>
+                  <label class="form__achievements-label" for="sunburn" tabindex="0">Обгорел на пляже</label>
                 </li>
                 <li class="form__achievements-item">
                   <input class="form__achievements-input" type="checkbox" id="chuck" name="chuck">
-                  <label class="form__achievements-label" for="chuck">Видел Чака Норриса</label>
+                  <label class="form__achievements-label" for="chuck" tabindex="0">Видел Чака Норриса</label>
                 </li>
                 <li class="form__achievements-item">
                   <input class="form__achievements-input" type="checkbox" id="souvenirs" name="souvenirs">
-                  <label class="form__achievements-label" for="souvenirs">Накупил сувениров</label>
+                  <label class="form__achievements-label" for="souvenirs" tabindex="0">Накупил сувениров</label>
                 </li>
                 <li class="form__achievements-item">
                   <input class="form__achievements-input" type="checkbox" id="tower" name="tower" checked>
-                  <label class="form__achievements-label" for="tower">Удержал башню</label>
+                  <label class="form__achievements-label" for="tower" tabindex="0">Удержал башню</label>
                 </li>
                 <li class="form__achievements-item">
                   <input class="form__achievements-input" type="checkbox" id="hotel" name="hotel">
-                  <label class="form__achievements-label" for="hotel">Разгромил отель</label>
+                  <label class="form__achievements-label" for="hotel" tabindex="0">Разгромил отель</label>
                 </li>
               </ul>
             </fieldset>
